--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native-gesture-handler": "^1.5.0",
     "react-native-modal": "^11.5.3",
     "react-native-reanimated": "^1.4.0",
+    "react-native-root-toast": "^3.2.0",
     "react-native-screens": "^2.0.0-alpha.8",
     "react-native-snap-carousel": "^3.8.4",
     "react-native-swipeout": "^2.3.6",
