--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-community/async-storage": "^1.6.3",
     "react": "16.9.0",
     "react-native": "0.61.4",
+    "react-native-cookies": "^3.3.0",
     "react-native-gesture-handler": "^1.5.0",
     "react-native-modal": "^11.5.3",
     "react-native-reanimated": "^1.4.0",
