--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "react-native-cookies": "^3.3.0",
     "react-native-gesture-handler": "^1.5.0",
     "react-native-modal": "^11.5.3",
+    "react-native-normalize": "^1.0.1",
     "react-native-reanimated": "^1.4.0",
     "react-native-root-toast": "^3.2.0",
     "react-native-screens": "^2.0.0-alpha.8",
     "react-native-snap-carousel": "^3.8.4",
     "react-native-swipeout": "^2.3.6",
+    "react-native-vector-icons": "^6.6.0",
     "react-native-webview": "^7.5.2",
     "react-navigation": "^4.0.10",
     "react-navigation-drawer": "^2.3.3",
