--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-navigation-drawer": "^2.3.3",
     "react-navigation-stack": "^1.10.3",
     "react-navigation-tabs": "^2.5.6",
-    "react-redux": "^7.1.3"
+    "react-redux": "^7.1.3",
+    "socket.io-client": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.7.5",
