--- a/package.json
+++ b/package.json
@@ -8,14 +8,13 @@
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint .",
-    "postinstall": "jetifier -r"
+    "postinstall": "npx jetify"
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.6.3",
     "react": "16.9.0",
     "react-native": "0.61.4",
-    "react-native-cookies": "^3.3.0",
-    "react-native-gesture-handler": "^1.5.0",
+    "react-native-auto-scroll": "0.0.1",
     "react-native-modal": "^11.5.3",
     "react-native-normalize": "^1.0.1",
     "react-native-reanimated": "^1.4.0",
@@ -41,6 +40,7 @@
     "jest": "^24.9.0",
     "jetifier": "^1.6.4",
     "metro-react-native-babel-preset": "^0.57.0",
+    "react-native-gesture-handler": "1.0.16",
     "react-test-renderer": "16.9.0"
   },
   "jest": {
